--- a/RPGVXAcecn/rgss/syntax03.html
+++ b/RPGVXAcecn/rgss/syntax03.html
@@ -50,10 +50,10 @@ type=text/css href="../style.css">
 <P>实例：</P><PRE>"这是字符串表达式\n"
 '这是字符串表达式'</PRE>
 <P><A href="sc_string.html">字符串</A> 表达式以单引号（'）或双引号（"）开头并结尾。</P>
-<P>使用双引号时，可以使用 <A href="#L000255">控制符</A>&nbsp;与 <A href="#L000271">内嵌表达式</A>
+<P>使用双引号时，可以使用 <A href="#L000255">转义符</A> 与 <A href="#L000271">内嵌表达式</A>
 。单引号则不行（除了 \' 和 \\ 以外）。</P>
 <P>以空白符间隔的多个字符串表达式视为同一个字符串。</P><PRE>p "foo" "bar"   # =&gt; "foobar"</PRE>
-<H3><A name=L000255>控制符</A></H3>
+<H3><A name=L000255>转义符</A></H3>
 <P>注：在日文字体中，"\"和"&#165;"拥有相同的效力。</P>
 <DL>
   <DT>\t
