--- a/RPGVXAcecn/rgss/appendix01.html
+++ b/RPGVXAcecn/rgss/appendix01.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>Regular Expressions</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
 <H1>正则表达式</H1>
 <UL>
-  <LI><A href="#L000160">后位引用</A> 
+  <LI><A href="#L000160">后位引用</A>
   <LI><A href="#L000161">字符集</A> </LI></UL>
 <P>下列是 Ruby 所支持的特殊字符列表。 </P>
 <UL>
-  <LI>不带 \ 的字母和数字不属于特殊字符。 
+  <LI>不带 \ 的字母和数字不属于特殊字符。
   <LI>带 \ 的符号不属于特殊字符。 </LI></UL>
 <P>...特殊字符判断规则就这两点。 </P>
 <UL>
@@ -24,8 +24,8 @@ type=text/css href="../style.css">
 </PRE>
   <LI>
   <P>.</P>
-  <P>匹配任何单一字符，换行符除外(使用多字节字符时，代表一个字符，而不是一字节)。与正则表达式选项 m(多行模式，参看 <A 
-  href="rgss/syntax03.html#L000274">正则表达式字面值</A> 
+  <P>匹配任何单一字符，换行符除外(使用多字节字符时，代表一个字符，而不是一字节)。与正则表达式选项 m(多行模式，参看 <A
+  href="rgss/syntax03.html#L000274">正则表达式字面值</A>
   ) 同用可以匹配任何字符(包括换行符）。</P><PRE>p /./e =~ " A "[0,1]     # =&gt; nil
 </PRE>
   <LI>
@@ -66,17 +66,17 @@ type=text/css href="../style.css">
   <LI>
   <P>\G</P>
   <P>（无间隔）匹配上次匹配的位置（之后）。第一次匹配时则会匹配字符串首（与 \A 相同）。 </P>
-  <P>可以与 <A 
-  href="rgss/sc_string.html#L001412">scan</A> 
-  或 <A 
-  href="rgss/sc_string.html#L001390">gsub</A> 
+  <P>可以与 <A
+  href="rgss/sc_string.html#L001412">scan</A>
+  或 <A
+  href="rgss/sc_string.html#L001390">gsub</A>
   一起使用。在想要在上次匹配成功的位置之后进行匹配时使用。</P><PRE>#  Takes values from the front of the line three digits at a time (for as long as the values continue.)
 str = "123456 789"
 str.scan(/\G\d\d\d/) {|m| p m }
 </PRE>
   <LI>
   <P>[ ]</P>
-  <P>设置字符集。参看 <A 
+  <P>设置字符集。参看 <A
   href="rgss/appendix01.html#L000161">字符集</A>。</P>
   <LI>
   <P>*</P>
@@ -90,13 +90,13 @@ str.scan(/\G\d\d\d/) {|m| p m }
   <LI>
   <P>+?</P>
   <P>数量定义词。返回前面的表达式至少 1 次（匹配最短的子字符串）。</P>
-  <LI>{m} 
-  <LI>{m,} 
+  <LI>{m}
+  <LI>{m,}
   <LI>
   <P>{m,n}</P>
   <P>控制重复返回的次数的区间（区间数量定义词 interval quantifier）。返回前面所有的正则表达式：</P>
   <UL>
-    <LI>m&nbsp;次 
+    <LI>m&nbsp;次
     <LI>至少 m 次&nbsp;
     <LI>至少 m 次，至多 n 次 </LI></UL>
   <P>{n} 或 {,} 会匹配失败。</P><PRE>str = "foofoofoo"
@@ -105,13 +105,13 @@ p str[/(foo){2,}/]  # =&gt; "foofoofoo"
 p str[/(foo){1,2}/] # =&gt; "foofoo"
 </PRE>
   <P>正则表达式的 ?、*、+ 相当于 {0,1}、{0,}、{1,}。</P>
-  <LI>{m}? 
-  <LI>{m,}? 
+  <LI>{m}?
+  <LI>{m,}?
   <LI>
   <P>{m,n}?</P>
   <P>区间数量定义词，返回前面所有的正则表达式： </P>
   <UL>
-    <LI>m&nbsp;次 
+    <LI>m&nbsp;次
     <LI>大于 m 次&nbsp;
     <LI>大于 m 次，小于 n 次 </LI></UL>
   <P>匹配最短的子字符串。 </P>
@@ -129,16 +129,16 @@ p str[/(foo){1,2}/] # =&gt; "foofoo"
   <P>将正则表达式分群。匹配括号中正则表达式的子字符串可以使用后位引用。 </P>
   <LI>
   <P>\1, \2 ... \<VAR>n</VAR></P>
-  <P>后位引用。参看 <A 
+  <P>后位引用。参看 <A
   href="rgss/appendix01.html#L000160">后位引用</A>&nbsp;。</P>
   <LI>
   <P>(?# )</P>
   <P>注释。忽视括号中的所有子字符串。</P>
   <LI>
   <P>(?: )</P>
-  <P>无后位引用功能的分群。也就是说，进行分群但是不会成为后位引用的目标如： \1、\2（以及 <A 
-  href="rgss/s_variables.html#L000432">$1</A>、<A 
-  href="rgss/s_variables.html#L000433">$2</A>) 
+  <P>无后位引用功能的分群。也就是说，进行分群但是不会成为后位引用的目标如： \1、\2（以及 <A
+  href="rgss/s_variables.html#L000432">$1</A>、<A
+  href="rgss/s_variables.html#L000433">$2</A>)
   等。</P><PRE>/(abc)/ =~ "abc"
 p $1
 =&gt; "abc"
@@ -153,15 +153,14 @@ p $1
 </PRE>
   <P>是表示同时匹配 re1 和 re2 的正则表达式。<BR><BR>而：</P><PRE>re1(?=re2)
 </PRE>
-  <P>是匹配以紧接着 re2 的子字符串来匹配 re1。</P><PRE>p /foo(?=bar)/ =~ "foobar"      # =&gt; 0
-p $&amp;    # =&gt; "foo"    (no information about the "bar" section)
+  <P>是匹配以紧接着匹配 re2 的 re1。</P><PRE>p /foo(?=bar)/ =~ "foobar"      # =&gt; 0
+p $&amp;    # =&gt; "foo"    （没有 bar 的信息）
 </PRE>
   <LI>
   <P>(?! )</P>
-  <P>反前提匹配。根据反面的模板指定匹配位置（无间隔）。</P><PRE>(?!re1)re2
+  <P>反前提匹配。根据模板的反面指定匹配位置（无间隔）。</P><PRE>(?!re1)re2
 </PRE>
-  <P>The above expression is a regular expression that does not match re1, but 
-  does match re2.</P><PRE># A three-digit number that excludes 000
+  <P>上述正则表达式匹配不匹配 re1，但匹配 re2 的字符串。</P><PRE># A three-digit number that excludes 000
 re = /(?!000)\d\d\d/
 p re =~ "000"   # =&gt; nil
 p re =~ "012"   # =&gt; 0
@@ -185,8 +184,8 @@ p re =~ 'foobar'   # =&gt; nil
 <P>若是后位引用包含在所对应的括号内会匹配失败。另外，若是一个单位数的后位引用没有对应的括号也会匹配失败。</P><PRE>p /(\1)/ =~ "foofoofoo" # =&gt; nil
 p /(foo)\2/ =~ "foo\2"  # =&gt; nil
 </PRE>
-<P>虽然可以指定大于二位数的后位引用，但是千万不要与<A 
-href="rgss/syntax03.html#L000255">跳脱字符</A>的 
+<P>虽然可以指定大于二位数的后位引用，但是千万不要与<A
+href="rgss/syntax03.html#L000255">转义符</A>的
 \nnn （对应八进制的nnn字符）搞混。若其数值为单位数，则是后位引用。若是没有匹配的括号，大于二位数的数字就会视为八进制代码。 </P>
 <P>同样若在正则表达式中使用 1 位的八进制代码时，请以 0 开头（如 \01 等）（因为没有 \0 的后位引用，所以不会混淆）。 </P><PRE>p   /\1/ =~ "\1"   # =&gt; nil     # back reference that doesn乫t use parentheses.
 p  /\01/ =~ "\1"   # =&gt; 0       # octal code
@@ -208,7 +207,7 @@ p /(.)(\1)1/ =~ "111"   # =&gt; 0
 </PRE>
 <H2>字符集 </H2>
 <P>正则表达式的 [] 指定字符集。会匹配 [] 内的任何一个字符。 </P>
-<P>举例来说： /[abc]/ 可以成功匹配 "a"、"b" 或 "c"。 若是这些字符依照 ASCII 代码顺序，也可以使用 "-"，例如：/[a-c]/ 
+<P>举例来说： /[abc]/ 可以成功匹配 "a"、"b" 或 "c"。 若是这些字符依照 ASCII 代码顺序，也可以使用 "-"，例如：/[a-c]/
 来表示从 a 至 c 。若第一个字符为「 ^ 」，表示匹配指定字符以外的字符。 </P>
 <P>若「 ^ 」不是再开头的话，就会匹配 ^ 这个字符。同样的，当「-」出现在最前方或最后方则表示匹配「-」字符。 </P><PRE>p /[a^]/ =~ "^"   # =&gt; 0
 p /[-a]/ =~ "-"   # =&gt; 0
@@ -219,16 +218,16 @@ p /[-]/ =~ "-"   # =&gt; 0
 p /[^]/ =~ "^"
 # =&gt; invalid regular expression; empty character class: /[^]/
 </PRE>
-<P>若是以「 ] 」开头（或「 ] 」直接接在「 ^ 」之后）不是终止符集，而是表示匹配 「 ] 」字符。建议在这类的「 ] 」前面加上跳脱字符 /。</P><PRE>p /[]]/ =~ "]"       # =&gt; 0
+<P>若是以「 ] 」开头（或「 ] 」直接接在「 ^ 」之后）不是终止符集，而是表示匹配 「 ] 」字符。建议在这类的「 ] 」前面加上转义符 /。</P><PRE>p /[]]/ =~ "]"       # =&gt; 0
 p /[^]]/ =~ "]"      # =&gt; nil
 </PRE>
-<P>「 ^ 」、「 - 」、「 ] 」和「 \\ 」(反斜杠)可以使用跳脱字符 \ 来表示匹配自身。 </P><PRE>p /[\^]/ =~ "^"   # =&gt; 0
+<P>「 ^ 」、「 - 」、「 ] 」和「 \\ 」(反斜杠)可以使用转义符 \ 来表示匹配自身。 </P><PRE>p /[\^]/ =~ "^"   # =&gt; 0
 p /[\-]/ =~ "-"   # =&gt; 0
 p /[\]]/ =~ "]"   # =&gt; 0
 p /[\\]/ =~ "\\"  # =&gt; 0
 </PRE>
-<P>在 [] 之中可以与字符串一样使用 <A 
-href="rgss/syntax03.html#L000255">跳脱字符</A>，以及正则表达式 
+<P>在 [] 之中可以与字符串一样使用 <A
+href="rgss/syntax03.html#L000255">转义符</A>，以及正则表达式
 \w、\W、\s、\S、\d、\D（简化的字符集写法）。 </P>
 <P>请注意：由于反相匹配的关系，下面的字符集可匹配换行符（正则表达式 \W 和 \D 也是一样的效果）。 </P><PRE>p /[^a-z]/ =~ "\n"    # =&gt; 0
 </PRE>
