--- a/RPGVXAcecn/intro/108_object.html
+++ b/RPGVXAcecn/intro/108_object.html
@@ -75,9 +75,9 @@
 <p>用 RM 的概念来说的话，比如「装备」这个超类有「武器」、「护甲」两个子类。「装备」所共有的特征写在超类中，而子类里则编写了「武器」和「防具」的不同点。</p>
 <h2><a name="instance">生成实例</a></h2>
 <p>由类生成实例（对象），大体上分为两种方法。</p>
-<p>第一种方法是使用<strong>字面量</strong>。
-字面量是指，在源代码中直接写下的值。到现在为止，我们自然地使用了
-65 、 &quot;Ruby&quot; 这样的值，严密地说，这实际上是「利用字面量生成了整数和字符串的实例」。</p>
+<p>第一种方法是使用<strong>字面值</strong>。
+字面值是指，在源代码中直接写下的值。到现在为止，我们自然地使用了
+65 、 &quot;Ruby&quot; 这样的值，严密地说，这实际上是「利用字面值生成了整数和字符串的实例」。</p>
 <p>第二种方法，是以对象为接收者调用 new 方法。举例来说，由于范围对象是
 <a href="../rgss/sc_range.html">Range</a> 类的实例，可以调用 Range.new 来生成。在后面会讲到，生成自定义类的实例时常常会使用这个方法。</p>
 <p>下面的代码都是生成范围对象。前者使用了第一种方法，后者使用了第二种方法。</p>
