change some translations

--- a/RPGVXAcecn/intro/100_index.html
+++ b/RPGVXAcecn/intro/100_index.html
@@ -17,7 +17,7 @@
   <li><a href="105_branch.html">条件分歧</a></li>
   <li><a href="106_loop.html">循环</a></li>
   <li><a href="107_function.html">函数</a></li>
-  <li><a href="108_object.html">对像</a></li>
+  <li><a href="108_object.html">对象</a></li>
   <li><a href="109_graphics.html">显示图片</a></li>
   <li><a href="110_array.html">数组</a></li>
   <li><a href="111_hash.html">哈希表</a></li>
