--- a/RPGVXAcecn/rpgvxace/3300_db_animation.html
+++ b/RPGVXAcecn/rpgvxace/3300_db_animation.html
@@ -59,73 +59,73 @@
 <dt>●清除帧</dt>
 <dd><p>将指定范围内的帧一并清除。指定要清除的帧的起始编号和结束编号。</p></dd>
 <dt>●补间帧</dt>
-<dd><p>以指定的两帧为基础，自动设定两帧之间的其他帧。[帧]和[单元]中填入补间的帧和单元的范围，[补间内容]中选择需要补间的项目之后点击[确定]。举例来说，同一单元第1帧在左端，第10帧在右端时，以位置</p></dd>
-<dt>●セル一括設定</dt>
-<dd><p>指定範囲のフレーム内のセルを同じ内容します。［フレーム］［セル］に設定対象のフレームとセルの範囲を指定し、設定対象の項目にチェックを付け、それぞれ設定値を指定します。</p></dd>
-<dt>●全体のスライド</dt>
-<dd><p>指定範囲のフレーム内のセルをまとめて移動します。［フレーム］に対象フレームの始めと終わりの番号を指定し、［移動量］の［X座標］［Y座標］に、それぞれの方向への移動距離をドット数で指定します。左または上に移動させるには［X座標］「Y座標」にマイナス値を指定します。</p></dd>
-<dt>●再生</dt>
-<dd><p>ボタンをクリックすると作成中のアニメーションを再生します。</p></dd>
-<dt>●パターンパレット</dt>
+<dd><p>以指定的两帧为基础，自动设定两帧之间的其他帧。[帧]和[单元]中填入补间的帧和单元的范围，[补间内容]中选择需要补间的项目之后点击[确定]。举例来说，同一单元第1帧在左端，第10帧在右端时，以位置作为补间内容，就可以在2~9帧中从左往右自动设置这一单元到不同的位置。</p></dd>
+<dt>●统一设置单元</dt>
+<dd><p>将指定范围内的所有帧的单元设为同一内容。在[帧]和[单元]中指定帧和单元的范围，在设定的目标上打上勾并指定对应的设定值。</p></dd>
+<dt>●整体移动坐标</dt>
+<dd><p>将指定范围内的帧中的单元做整体性移动。</p></dd>
+<dt>●播放</dt>
+<dd><p>点击该按钮会播放当前正在制作的动画。</p></dd>
+<dt>●图案板</dt>
 <dd>
-  <p>［グラフィック］で指定したファイルに収めたパターン画像を表示します。クリックすると、そのパターンがフレームへの配置対象になります。パターンは、パレットの左上にあるものを1とし、右に向かって順に番号（パターン番号）が割り振られます。</p>
+  <p>显示[动画图像]中指定的文件里的图案。点击图案后，改图案就会设置在当前的帧中。将图案板最左上角的图案编号为1，从左往右依次分配编号（图案编号）。</p>
 </dd>
 </dl>
 
-<h2><a name="key_animation_frameview">フレームビューの操作方法</a></h2>
+<h2><a name="key_animation_frameview">帧预览的操作方法</a></h2>
 
 <img src="img/3300_02.png" alt="フレームビューの操作方法" class="float_r">
 <dl>
-<dt>●セルの配置</dt>
+<dt>配置单元</dt>
 <dd>
-  <p>フレームに配置する画像を［パターンパレット］で選択し、フレーム編集エリアの空いているところをクリックします。すると、その画像を適用したセルが配置されます。ひとつのフレームには16個までセルを配置できます。</p>
+  <p>在[图案板]中选择想要配置的图像，再点击帧的编辑区域空白的地方。此时就会配置上一个应用了该图像的单元。一帧内最多可以配置16个单元。</p>
 </dd>
-<dt>●表示</dt>
-<dd><p>セルには枠と番号が表示されます。枠の色は白が選択中、赤が配置済み、青がひとつ前のフレームに配置されたものを表わします。番号はセルの優先順位で、大きいものほど手前に表示されます。</p></dd>
-<dt>●編集するセルの選択</dt>
-<dd><p>セルをクリックすると枠が白色になり、編集対象として選択されます。他のセルと重なった番号の小さいセルは、［Ctrl］キーを押しながらクリックすると選択できます。</p></dd>
-<dt>●セルの移動</dt>
-<dd><p>セルを移動するにはドラッグします（通常8ドット単位で移動し、［Alt］キーを押しながらドラッグすると2ドット単位で移動できます）。選択中のセルの位置は、フレーム編集エリアの右下に座標として表示されます。座標は画面中央のX座標、Y座標を（0,0）とし、X座標は-272272、Y座標は-208208の値で示されます。</p></dd>
-<dt>●コンテキストメニューによる操作</dt>
-<dd><p>セルを右クリックするとメニューが表示され、以下の操作を実行できます。［セルの設定］のウィンドウは、ダブルクリックすることでも開けます。</p></dd>
+<dt>●显示</dt>
+<dd><p>单元上会显示边框和编号。边框为白色表示当前选择中，红色表示配置完成，蓝色表示前一帧的配置。编号就是单元的优先顺序，编号越大的显示在越前方。</p></dd>
+<dt>●选择要编辑的单元</dt>
+<dd><p>点击一个单元后，该单元的边框会变成白色，这时这个单元就被选择为了编辑对象。被覆盖在下方的，编号较小的单元，可以按住[Ctrl]键再点击就可以选择到。</p></dd>
+<dt>●移动单元</dt>
+<dd><p>要移动一个单元，只需要拖拽即可。（通常移动的单位为8像素，按住[Alt] 键拖拽时移动的单位为2像素）当前选择的单元的位置坐标，会在帧编辑区域的右下角显示。坐标以画面中央的X、Y坐标为（0, 0），X坐标、Y坐标会分别在 -272~272，-208~208 的范围内显示。</p></dd>
+<dt>●上下文菜单中的操作</dt>
+<dd><p>右击元件可以弹出一个菜单，执行如下的操作。[设置单元]窗口也可以双击打开。</p></dd>
 </dl>
 
 <dl><dd><dl>
-<dt>▼コンテキストメニューの項目</dt>
+<dt>▼上下文菜单的项目</dt>
 
-<dt>設定</dt>
-<dd><p>セルの設定ウィンドウを開きます（後述）。</p></dd>
-<dt>元に戻す</dt>
-<dd><p>直前の操作を取り消し、操作前の状態に戻します。最大で8手順前までの状態に戻せます。</p></dd>
-<dt>やり直し</dt>
-<dd><p>［元に戻す］で戻した状態から操作後の状態にします。</p></dd>
-<dt>切り取り</dt>
-<dd><p>選択中のセルをクリップボードに取り込み削除します。</p></dd>
-<dt>コピー</dt>
-<dd><p>選択中のセルをクリップボードに取り込みます。</p></dd>
-<dt>貼り付け</dt>
-<dd><p>クリップボード上のセルを配置します。</p></dd>
-<dt>削除</dt>
-<dd><p>選択中のセルを削除します。</p></dd>
-<dt>上へ／下へ</dt>
-<dd><p>セルの表示の優先順（手前／奥）を変更します。</p></dd>
+<dt>设定</dt>
+<dd><p>打开设置单元窗口（下述）。</p></dd>
+<dt>撤销</dt>
+<dd><p>撤销上一步操作，返回到操作前的状态。最多可以回到8步前。</p></dd>
+<dt>重做</dt>
+<dd><p>将[撤销]掉的操作重做。</p></dd>
+<dt>剪切</dt>
+<dd><p>将当前选择的单元加入剪贴板并删除。</p></dd>
+<dt>复制</dt>
+<dd><p>将当前选择的单元加入剪贴板。</p></dd>
+<dt>粘贴</dt>
+<dd><p>配置剪贴板上的单元。</p></dd>
+<dt>删除</dt>
+<dd><p>删除当前选择的单元。</p></dd>
+<dt>向上/向下</dt>
+<dd><p>更改单元显示的优先顺序（前后）。</p></dd>
 
-<dt>▼セルの設定ウィンドウの内容</dt>
+<dt>▼设置单元窗口的内容</dt>
 
-<dt>パターン</dt>
-<dd><p>パターンの番号です。番号を変えると対応するものに変わります。</p></dd>
-<dt>X座標／Y座標</dt>
-<dd><p>セルの表示位置です。X座標（-272272）、Y座標（-208208）を指定します。</p></dd>
-<dt>拡大率</dt>
-<dd><p>セルの表示倍率です。元画像の大きさを100％とした比率（20800％）で指定します。</p></dd>
-<dt>回転角度</dt>
-<dd><p>セルを表示角度（1360度）です。指定の角度だけ時計回りに回転して表示されます。多用すると、ゲームの処理速度が遅くなる場合があります。</p></dd>
-<dt>左右反転</dt>
-<dd><p>［あり］にするとセルのパターンを左右方向に反転表示します。</p></dd>
+<dt>图案</dt>
+<dd><p>图案的编号。更改编号之后单元对应的图案也会改变。</p></dd>
+<dt>X坐标/Y坐标</dt>
+<dd><p>单元显示的位置。指定X坐标（-272~272）、Y坐标（-208~208）。</p></dd>
+<dt>缩放度</dt>
+<dd><p>单元显示的倍率。原图大小为100%，指定显示的比率（20%~800%）。</p></dd>
+<dt>旋转角度</dt>
+<dd><p>单元显示的角度（0~360°）。图案会根据指定的角度逆时针旋转。滥用可能导致游戏处理缓慢。</p></dd>
+<dt>左右翻转</dt>
+<dd><p>设定为[是]时，图案显示时会左右翻转。</p></dd>
 <dt>不透明度</dt>
-<dd><p>セルの不透明度（0255）です。値が小さいほど透明度が高くなり、0にすると見えなくなります。</p></dd>
-<dt>合成方法</dt>
-<dd><p>別のセルと重なったときの色合いの混ぜ合わせ方です。［通常］を標準とし、［加算］にすると白っぽく、［減算］にすると黒っぽく表示されます。</p></dd>
+<dd><p>单元的不透明度（0~255）。值越小，透明度越高。设为0即为不可见。</p></dd>
+<dt>合成方式</dt>
+<dd><p>单元重叠时色调的混合方式。以[正常]作为标准，[加法]会使混合后的颜色变白，[减法]会使混合后的颜色变黑。</p></dd>
 
 </dl></dd></dl>
 
