--- a/RPGVXAcecn/rpgvxace/index.html
+++ b/RPGVXAcecn/rpgvxace/index.html
@@ -23,7 +23,7 @@
 
 <p>此外，本软件大部分项目都有弹出的提示。把鼠标指针停留在编辑器上的项目一段时间之后，就会显示简单的说明。请善于运用这个功能。</p>
 <div align="center"><img src="img/0000_02.png" alt="ポップアップヒント"></a></div><br><br>
-<p align="center"><strong>【翻译： Taroxd，喵呜喵5，判约之轮】</strong></p>
+<p align="center"><strong>【翻译： Taroxd，喵呜喵5】</strong></p>
 <p align="center"><strong>【特别鸣谢：Hyrious】</strong></p>
 <h6></h6>
 &copy;2011 ENTERBRAIN, INC./YOJI OJIMA
