--- a/RPGVXAcecn/rpgvxace/2120_map_design.html
+++ b/RPGVXAcecn/rpgvxace/2120_map_design.html
@@ -56,7 +56,7 @@
 <dd><p>在地图上某个位置点击右键可以复制该位置的底层图块与高层图块，之后可以使用复制的图块来绘制地图。</p></dd>
 
 <dt>● 自动图块</dt>
-<dd><p>A层图块选择面版中的某些图块是自动图块。自动图块包含多个图形，边界部分的图块将自动切换成对应的图形。<a href="3310_db_tileset.html">［数据库］</a>的图块设置中A1~A4的图块可以设置成自动图块。</p>
+<dd><p>A层图块选择面版中的某些图块是自动图块。自动图块包含多个图形，边界部分的图块将自动切换成对应的图形。<a href="3310_db_tileset.html">[数据库]</a>的图块设置中A1~A4的图块可以设置成自动图块。</p>
 <p>另外，按住Shift键绘制地图或者复制图块的时候自动图块功能将被暂时忽略。</p></dd>
 
 <dt>● 自动阴影</dt>
