fix some errors

--- a/RPGVXAcecn/rgss/gc_window.html
+++ b/RPGVXAcecn/rgss/gc_window.html
@@ -41,31 +41,31 @@ type=text/css href="../style.css">
 <DL>
   <DT>windowskin
   <DD>
-  <P>引用一个位图&nbsp;(<A href="gc_bitmap.html">Bitmap</A>)&nbsp;作为窗口的外观。</P>
+  <P>引用一个位图（<A href="gc_bitmap.html">Bitmap</A>）作为窗口的外观。</P>
   <P>外观规格和 RMVX 基本相同，具体规格请参见 <A
   href="../rpgvx/resource.html#windowskin">窗口外观的具体规格</A>。</P>
   <DT>contents
   <DD>
-  <P>引用作为窗口内容的位图（<A href="gc_bitmap.html">Bitmap</A>&nbsp;）。</P>
+  <P>引用作为窗口内容的位图（<A href="gc_bitmap.html">Bitmap</A>）。</P>
   <DT>cursor_rect
   <DD>
-  <P>光标存放区域（<A href="gc_rect.html">Rect</A>&nbsp;）。</P>
+  <P>光标存放区域（<A href="gc_rect.html">Rect</A>）。</P>
   <P>根据窗口内容，创建一个含有坐标的矩形对象。 <SPAN class=rgss3>(RGSS3)</SPAN></P>
   <DT>viewport
   <DD>
-  <P>引用与窗口关联的显示端口（<A href="gc_viewport.html">Viewport</A>&nbsp;）。</P>
+  <P>引用与窗口关联的显示端口（<A href="gc_viewport.html">Viewport</A>）。</P>
   <DT>active
   <DD>
-  <P>光标闪烁的状态。true 表示闪烁。默认值为True。</P>
+  <P>光标闪烁的状态。true 表示闪烁。默认值为 true。</P>
   <DT>visible
   <DD>
-  <P>窗口可见的状态。true 表示可见。默认值为True。</P>
+  <P>窗口可见的状态。true 表示可见。默认值为 true。</P>
   <DT>arrows_visible <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
-  <P>光标可见的状态，true表示可见。默认值为True。</P>
+  <P>光标可见的状态，true 表示可见。默认值为 true。</P>
   <DT>pause
   <DD>
-  <P>暂停标记可见的状态。true 表示可见。默认值为False。</P>
+  <P>暂停标记可见的状态。true 表示可见。默认值为 false。</P>
   <DT>x
   <DD>
   <P>窗口的 X 坐标。</P>
@@ -84,15 +84,15 @@ type=text/css href="../style.css">
   <P>默认值为100。 <SPAN class=rgss3>(RGSS3)</SPAN></P>
   <DT>ox
   <DD>
-  <P>窗口内容的 X 坐标。滚动窗口时修改此数值。</P>
+  <P>窗口内容原点的 X 坐标。滚动窗口时修改此数值。</P>
   <P>也可作用于光标。 <SPAN class=rgss3>(RGSS3)</SPAN></P>
   <DT>oy
   <DD>
-  <P>窗口内容的&nbsp;Y 坐标。滚动窗口时修改此数值。</P>
+  <P>窗口内容原点的 Y 坐标。滚动窗口时修改此数值。</P>
   <P>也可作用于光标。 <SPAN class=rgss3>(RGSS3)</SPAN></P>
   <DT>padding <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
-  <P>窗口框架与内容之间的虚空区域宽度，默认值为12。 <SPAN class=rgss3>(RGSS3)</SPAN></P>
+  <P>窗口框架与内容之间的虚空区域宽度，默认值为 12。 <SPAN class=rgss3>(RGSS3)</SPAN></P>
   <DT>padding_bottom <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
   <P>窗口底部的填充物。必须在设置 padding 后才可使用，因为这二者是联动的。</P>
@@ -113,5 +113,5 @@ class=rgss3>(RGSS3)</SPAN>。</P>
   255，则不会显示其内容。默认值 255。</P></DD>
   <DT>tone <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
-  <P>窗口的背景颜色（<A href="gc_tone.html">Tone</A>&nbsp;）。</P></DD></DL>
+  <P>窗口的背景颜色（<A href="gc_tone.html">Tone</A>）。</P></DD></DL>
 <H6></H6></BODY></HTML>
