--- a/RPGVXAcecn/rpgvxace/3300_db_animation.html
+++ b/RPGVXAcecn/rpgvxace/3300_db_animation.html
@@ -20,7 +20,7 @@
 <dl><dt>●名称</dt>
 <dd><p>动画的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
 <dt>●动画图像</dt>
-<dd><p>制作动画使用的图片文件（最多两张）。在各栏按下[…]按钮会打开[动画图像]窗口，在其中指定使用的文件。同时，可以滑动[色调]条来更改图片的色调。指定文件后，图案会显示在[图案板]中。</p></dd>
+<dd><p>制作动画使用的图片文件（最多两张）。在各栏按下[…]按钮会打开[动画图像]窗口，在其中指定使用的文件。同时，可以滑动[色调]条来更改图片的色调。指定文件后，图案会显示在[图案面板]中。</p></dd>
 <dt>●基础位置</dt>
 <dd><p>指定动画显示的位置。选择[头顶][中心][脚底]的话，会分别以对象的上方、中央、下方为基准。选择[画面]的话会覆盖在整个画面上。此外，动画设定为该动画的技能和物品的效果范围是全体时，设定为[头顶][中心][脚底]的动画会在每个人物上分别显示。</p></dd>
 <dt>●帧数</dt>
@@ -48,7 +48,7 @@
   <p>动画内帧的列表。点击后，选择的那一个编号的帧会成为编辑的对象，内容会显示在帧预览中。点击列表上下方的[上一帧][下一帧]可以前后移动所编辑的帧。此外，在帧的编号上右击会弹出一个菜单，以帧为单位执行[复制][粘贴][清空][插入][删除]操作。</p>
 </dd>
 <dt>●帧预览</dt>
-<dd><p>当前帧的内容。在这里可以将[图案板]中的图片设置为“单元”，以此来设置显示的内容。绿色的矩形表示游戏窗口中的显示范围。</p>
+<dd><p>当前帧的内容。在这里可以将[图案面板]中的图片设置为“单元”，以此来设置显示的内容。绿色的矩形表示游戏窗口中的显示范围。</p>
 <p>编辑方法见后文“帧预览的操作方法”。</p></dd>
 <dt>●更改战斗图</dt>
 <dd><p>更改帧预览中敌人的战斗图。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
@@ -66,9 +66,9 @@
 <dd><p>将指定范围内的帧中的单元做整体性移动。</p></dd>
 <dt>●播放</dt>
 <dd><p>点击该按钮会播放当前正在制作的动画。</p></dd>
-<dt>●图案板</dt>
+<dt>●图案面板</dt>
 <dd>
-  <p>显示[动画图像]中指定的文件里的图案。点击图案后，改图案就会设置在当前的帧中。将图案板最左上角的图案编号为1，从左往右依次分配编号（图案编号）。</p>
+  <p>显示[动画图像]中指定的文件里的图案。点击图案后，改图案就会设置在当前的帧中。将图案面板最左上角的图案编号为1，从左往右依次分配编号（图案编号）。</p>
 </dd>
 </dl>
 
@@ -78,7 +78,7 @@
 <dl>
 <dt>配置单元</dt>
 <dd>
-  <p>在[图案板]中选择想要配置的图像，再点击帧的编辑区域空白的地方。此时就会配置上一个应用了该图像的单元。一帧内最多可以配置16个单元。</p>
+  <p>在[图案面板]中选择想要配置的图像，再点击帧的编辑区域空白的地方。此时就会配置上一个应用了该图像的单元。一帧内最多可以配置16个单元。</p>
 </dd>
 <dt>●显示</dt>
 <dd><p>单元上会显示边框和编号。边框为白色表示当前选择中，红色表示配置完成，蓝色表示前一帧的配置。编号就是单元的优先顺序，编号越大的显示在越前方。</p></dd>
