--- a/RPGVXAcecn/rgss/rgss.html
+++ b/RPGVXAcecn/rgss/rgss.html
@@ -19,13 +19,12 @@ type=text/css href="../style.css">
     <LI><A href="#ext_lib">ю╘у╧©Б</A>
     <LI><A href="#character_code">вж╥Ш╪╞</A>
     <LI><A href="#property">йТпт</A> </LI></UL></LI></UL>
-<H2><A name=whats_new>RGSS3</A>&nbsp;пб╧╕дэ╫Ииэ <SPAN
-class=rgss3>(RGSS3)</SPAN> </H2>
-<P>RGSS3 йгдзжцсз&nbsp;RPG Maker VX Ace ╣др╩лв╫е╠╬о╣мЁё╛ ╨м RMVX жп╣д RGSS2
+<H2><A name=whats_new>RGSS3 ╣дпб╧╕дэ</A><SPAN class=rgss3>(RGSS3)</SPAN> ║╒</H2>
+<P>RGSS3 йгдзжцсз RPG Maker VX Ace ╣др╩лв╫е╠╬о╣мЁё╛ ╨м RMVX жп╣д RGSS2
 ╠хфПю╢сп╨э╤Ю╣д╡╩м╛ж╝╢╕ё╛жВр╙╣д╠Д╩╞хГобё╨</P>
 <UL>
-  <LI>ЁлпР╫╗а╒тз&nbsp;Ruby 1.9.2 ╣д╩Ы╢║ж╝ио║ё&nbsp;Ruby
-  1.9&nbsp;╠хфПиор╩╦Ж╟Ф╠╬спак╨э╢С╣д╫Ь╡╫ё╛ткппп╖бйспакотжЬ╣длА╦ъ║ё
+  <LI>ЁлпР╫╗а╒тз Ruby 1.9.2 ╣д╩Ы╢║ж╝ио║ёRuby
+  1.9 ╠хфПиор╩╦Ж╟Ф╠╬спак╨э╢С╣д╫Ь╡╫ё╛ткппп╖бйспакотжЬ╣длА╦ъ║ё
   <LI>ря╬╜╪╞Ёиакхунд╨мс╒нд╣дDLLж╖Ёж©Бё╗╣╠х╩ё╛жпндж╖Ёж©БйгжВЁлпР╨╨╩╞уъ╨Сю╢лМ╪с╣дё╘ё╛сно╥╣д╢╟лЕмЙх╚ж╖Ёжхунд╩╥╬Ё╨мс╒нд╩╥╬Ё║ё
   <LI>╤т╪сцэ╣╣╟╦╣дкЦ╥╗вЖЁЖак╦д╫Ьё╛спп╖╣ь╦дифак╢Спмсно╥фТ╤╞й╠╪ДбЧЁ╓╣д╠в╡║║ё
   <LI>й╧сцF12╟╢е╔©ирт╤тсно╥╫Ьпп╦╢н╩╡ывВё╗й╧сцак <A href="g_functions.html#rgss_main">rgss_main</A>
@@ -34,23 +33,23 @@ class=rgss3>(RGSS3)</SPAN> </H2>
   <LI>йДЁЖнд╠╬╣дцХ╩ФтйпМй╧сц <A href="gc_font.html">Font</A> юЮ╣д╥╫╥╗ак║ё
   <LI>тйпМм╗╧Щ╠Ю╪╜фВя║оНя║тЯйг╥Ятз╡Бйтсно╥й╠©╙фТ DEBUG ©ьжфл╗ё╛рт╫Ьпп╦ЭиН╡Ц╢н╣дсно╥╣Вйт║ё
   <LI>p ╨╞йЩ©иртйДЁЖн╙╤т╩╟©Р╣д╧╕дэря╬╜╠╩╥оЁЩё╛х║╤Ь╢Зж╝╣дйг <A
-  href="g_functions.html#msgbox">msgbox</A>&nbsp;╨м <A
-  href="g_functions.html#msgbox_p">msgbox_p</A>&nbsp;а╫╦Ж╨╞йЩ║ё
+  href="g_functions.html#msgbox">msgbox</A> ╨м <A
+  href="g_functions.html#msgbox_p">msgbox_p</A> а╫╦Ж╨╞йЩ║ё
   <LI>ж╖ЁжOgg╦Яй╫╣дйсф╣╡╔╥е╧╕дэё╛й╧сц <A
   href="gm_graphics.html#play_movie">Graphics.play_movie</A> ╥╫╥╗╪╢©и║ё
   <LI>тйпМOgg╦Яй╫рт╪╟Wav╦Яй╫╣дрТф╣нд╪Ч╢сжп╪Д©╙й╪╡╔╥её╗й╧сц <A
-  href="gm_audio.html">Audio</A>&nbsp;дё©Ижп╣доЮ╧ь╥╫╥╗ё╘║ё
+  href="gm_audio.html">Audio</A> дё©Ижп╣доЮ╧ь╥╫╥╗ё╘║ё
   <LI>тйпМй╧сц╥Ш╨ею╢╤╗рЕ╟╢е╔цШЁфё╗й╧сц <A href="gm_input.html">Input</A> дё©Иё╘ё╛╤Ь╤л╥Ш╨ер╡╫╚╠╩тйпМй╧сцё╛╠ххГ
   Input.trigger?(:C)║ё
   <LI>╣╠ЁлпР╥╒иЗ╢МнС╣дй╠╨Рё╛╫╚╩Авт╤╞отй╬р╩╦ЖлАй╬©РртоЙо╦к╣цВ╢МнСпео╒║ё </LI></UL>
 <P>ЁЩ╢кж╝мБё╛╩╧спр╩п╘п║╠Д╩╞аТ╢Щсц╩╖втппл╫кВ║ё</P>
-<P>тз╠╬нджпё╛кЫсптзRGSS3жпжьпб╤╗рЕ╣д╡©╥ж╤╪╩Асц╢к╥Ш╨е╫Ьпп╠Йв╒ё╨&nbsp;<SPAN
-class=rgss3>(RGSS3)&nbsp; <FONT color=#000000>║ё</FONT></SPAN></P>
+<P>тз╠╬нджпё╛кЫсптзRGSS3жпжьпб╤╗рЕ╣д╡©╥ж╤╪╩Асц╢к╥Ш╨е╫Ьпп╠Йв╒ё╨ <SPAN
+class=rgss3>(RGSS3)</SPAN></P>
 <H2>©╙й╪сно╥</H2><IMG class=float_r alt="game folder" src="img/folder.png">
 <P>р╩╟Ц╣дё╛╣╠дЦк╚╩ВGame.exeнд╪Ч╣дй╠╨Рё╛ЁлпР╬м╩Авт╤╞©╙й╪╪стьRGSS3ткпп©Бртж╖Ёжсно╥ЁлпР╣дткппё╛╤Ь╢Ф╢╒уБп╘нд╪Ч╣днд╪Ч╪пё╛м╗Ёё╬м╠╩Ёфн╙сно╥д©б╪║ё</P>
 <P>уЩтз╠Ю╪╜жп╣дсно╥©иртм╗╧Щтз╡к╣╔жпя║тЯсно╥пт╡Бйт╩РуътзйЩ╬щ©Б - ╣пх╨жпя║тЯу╫╤╥╡Бйт║ё хГ╧ШдЦя║тЯаксно╥пт╡Бйтё╛дгц╢╠Да© $TEST
 ╣дж╣╫╚╩А╠╩тщй╠иХ╤╗н╙уФё╛╤ЬхГ╧ШдЦя║тЯаку╫╤╥╡Бйтё╛тРйг╠Да© $BTEST ╣дж╣╫╚╩А╠╩тщй╠иХ╤╗н╙уФ║ё</P>
-<P>сно╥фДкШ╣др╩п╘иХ╤╗тР╢Ф╢╒сз&nbsp;<A href="#game_ini">Game.ini</A>&nbsp;уБ╦ЖеДжцнд╪Ч╣╠жп║ё</P>
+<P>сно╥фДкШ╣др╩п╘иХ╤╗тР╢Ф╢╒сз <A href="#game_ini">Game.ini</A> уБ╦ЖеДжцнд╪Ч╣╠жп║ё</P>
 <H2><A name=game_ini>Game.ini</A></H2>
 <P>Game.ini йгтз╧╓Ёл╫╗а╒ж╝ЁУ╬м╠╩вт╤╞╢╢╫╗╣дё╛╡╒гр©иртсихМ╪Ч╠╬иМ╫Ьпп╦Эпб╡ывВё╛╣╚йгкЭр╡©ирт╠╩╪гйб╠╬рт╪╟фДкШндвж╠Ю╪╜хМ╪Ч╠Ю╪╜║ё</P>
 <P>╥╤юЩё╨</P><PRE>[Game]
@@ -63,9 +62,9 @@ Title=RubyQuest
   <DT>
   <DT>RTP
   <DD>
-  <P>&nbsp;уБйгтзуБ╦Жсно╥жпй╧сц╣д&nbsp;<A href="#rgss_rtp">RGSS-RTP</A> цШЁфё╛м╗Ёёйг
+  <P>уБйгтзуБ╦Жсно╥жпй╧сц╣д <A href="#rgss_rtp">RGSS-RTP</A> цШЁфё╛м╗Ёёйг
   "RPGVXAce"║ё</P>
-  <P>&nbsp;хГ╧ШуБ╦ЖRTPдёвИц╩сп╠╩╟╡в╟ё╛дгц╢сно╥ЁлпР╬м╩А╠╗╢М║ё</P>
+  <P>хГ╧ШуБ╦ЖRTPдёвИц╩сп╠╩╟╡в╟ё╛дгц╢сно╥ЁлпР╬м╩А╠╗╢М║ё</P>
   <DT>Library
   <DD>
   <P>RGSS кЫй╧сц╣д DLL╣╣╟╦ё╛м╗Ёё╟╡в╟тз RTP нд╪Ч╪пжп║ё</P>
@@ -94,27 +93,20 @@ href="gm_graphics.html#transition">Graphics.transition</A></P>
 Ace&nbsp;жпн╗р╩╠Йв╪╣дRTP╪╞╬мйг"RPGVXAce"ё╛╣╚йгожтздЦря╬╜©иртвтпп╢╢╫╗╤юа╒╣дRTP╪╞ак║ёхГ╧ШдЦж╙╣юхГ╨нжфвВ╟╡в╟╟Эё╛
 дгц╢дЦ╬м©иртвЯя╜ртоб╧ФтРю╢╤╗жф╤юль╣дRTP╪╞║ё</P>
 <P>р╩╟Цю╢к╣ё╛RTP╩А╠╩╟╡в╟╫ЬуБ╦Жд©б╪ё╨ </P><PRE>[CommonFilesFolder]\Enterbrain\RGSS3\[RTPName]
-</PRE>уБюО╣д [CommonFilesFolder] фДй╣╬мйг╡ывВо╣мЁжп╣д ⌠Common Files нд╪Ч╪пё╛&nbsp;╤Ь
+</PRE>уБюО╣д [CommonFilesFolder] фДй╣╬мйг╡ывВо╣мЁжп╣д Common Files нд╪Ч╪пё╛╤Ь
 [RTPName] тРйгRTP╪╞╣дцШвж║ё╠ххГё╨ <PRE>C:\Program Files\Common Files\Enterbrain\RGSS3\Standard
 </PRE>
-<P>RTP╟╡в╟ЁлпР╩АтзуБ╦Жн╩жцп╢хКр╩╦Жвж╥Ш╢╝юЮпм╣д╪Эж╣рт╤╗н╩RTPнд╪Чн╩жц&nbsp;"HKEY_LOCAL_MACHINE\SOFTWARE\Enterbrain\RGSS3\RTP"ё╛RGSS
-╫е╠╬╢ЗбКр╡╩Ам╗╧ЩуБ╦Ж╪Эж╣ю╢а╛╫с╣╫RTPжп╣днд╪Ч║ё.</P>
+<P>RTP╟╡в╟ЁлпР╩АтзуБ╦Жн╩жцп╢хКр╩╦Жвж╥Ш╢╝юЮпм╣д╪Эж╣рт╤╗н╩RTPнд╪Чн╩жц "HKEY_LOCAL_MACHINE\SOFTWARE\Enterbrain\RGSS3\RTP"ё╛RGSS
+╫е╠╬╢ЗбКр╡╩Ам╗╧ЩуБ╦Ж╪Эж╣ю╢а╛╫с╣╫RTPжп╣днд╪Ч║ё</P>
 <H2>╪сцэ╣╣╟╦</H2>
-<P style="MARGIN-RIGHT: 0px"
-dir=ltr>╤тсно╥╫Ьпп╪сцэё╛©ирттзр╩╤╗Ёл╤хио╥юж╧╠Пхк╤тсно╥╫Ьпппч╦д/╥жнЖ║ёдЦ©иртм╗╧ЩтзжфвВсно╥╥╒пп╟Эй╠╧╢я║"иЗЁи╪сцэйЩ╬щнд╪Ч"ю╢╤тсно╥╣дйЩ╬щ©Б╨мкь╡д╫Ьпп╪сцэё╛уБп╘йЩ╬щ╫╚╩Атз╪сцэ╨С╠╩╢Р╟Э╫Ь"Game.rgss3a"нд╪Ч╣╠жпё╛╣╚р╙в╒рБё╛╠╩╪сцэ╣дкь╡джп╡╒╡╩╟Эю╗рТф╣╨мвжлЕнд╪Ч║ё</P>
-<BLOCKQUOTE style="MARGIN-RIGHT: 0px" dir=ltr>
-  <P style="MARGIN-RIGHT: 0px"
-  dir=ltr>╤тсзря╬╜╠╩╢Р╟Э╫Ь╪сцэ╣╣╟╦жп╣дкь╡днд╪Чё╛дЦ©им╗╧Щртобдзжц╨╞йЩ╫Ьпп╣Всц≈≈╬моЯ╣Всцт╜нд╪Ч╪пжп╣днд╪Чр╩яЫё╨</P>
-  <P><A href="g_functions.html#load_data">load_data</A>, <A
-  href="gc_bitmap.html#new">Bitmap.new</A>, <A
-  href="gm_graphics.html#transition">Graphics.transition</A></P>
-  <P style="MARGIN-RIGHT: 0px" dir=ltr>╣╠ЁлпРтзсно╥д©б╪об╪Л╡Б╣╫╪сцэ╣╣╟╦╣дй╠╨Рё╛тз <A
-  href="ata/Local/Temp/RPGVXAce/rgss/rgss.html#game_ini">Game.ini</A>
-  жпж╦╤╗╣д╫е╠╬нд╪Чё╗р╩╟ЦйгData\Scripts.rvdataё╘м╗Ёё╡╩╩А╠╩╫Б╤аё╛╤Ьйгж╠╫с╤ах║╪сцэ╣╣╟╦жп╣д╫е╠╬ё╛уБр╡йгн╙ак╥юж╧фДкШхкм╗╧ЩткппмБ╡©╫е╠╬╤Ь╢О╣╫╤ах║дз╡©нд╪Ч╣дд©╣д║ё</P></BLOCKQUOTE>
+<P>╤тсно╥╫Ьпп╪сцэё╛©ирттзр╩╤╗Ёл╤хио╥юж╧╠Пхк╤тсно╥╫Ьпппч╦д/╥жнЖ║ёдЦ©иртм╗╧ЩтзжфвВсно╥╥╒пп╟Эй╠╧╢я║"иЗЁи╪сцэйЩ╬щнд╪Ч"ю╢╤тсно╥╣дйЩ╬щ©Б╨мкь╡д╫Ьпп╪сцэё╛уБп╘йЩ╬щ╫╚╩Атз╪сцэ╨С╠╩╢Р╟Э╫Ь"Game.rgss3a"нд╪Ч╣╠жпё╛╣╚р╙в╒рБё╛╠╩╪сцэ╣дкь╡джп╡╒╡╩╟Эю╗рТф╣╨мвжлЕнд╪Ч║ё</P>
+  <P>╤тсзря╬╜╠╩╢Р╟Э╫Ь╪сцэ╣╣╟╦жп╣дкь╡днд╪Чё╛дЦ©им╗╧Щртобдзжц╨╞йЩ╫Ьпп╣Всц≈≈╬моЯ╣Всцт╜нд╪Ч╪пжп╣днд╪Чр╩яЫё╨</P>
+  <P><A href="g_functions.html#load_data">load_data</A>, <A href="gc_bitmap.html#new">Bitmap.new</A>, <A href="gm_graphics.html#transition">Graphics.transition</A></P>
+<P>╣╠ЁлпРтзсно╥д©б╪об╪Л╡Б╣╫╪сцэ╣╣╟╦╣дй╠╨Рё╛тз <A href="ata/Local/Temp/RPGVXAce/rgss/rgss.html#game_ini">Game.ini</A> жпж╦╤╗╣д╫е╠╬нд╪Чё╗р╩╟ЦйгData\Scripts.rvdataё╘м╗Ёё╡╩╩А╠╩╫Б╤аё╛╤Ьйгж╠╫с╤ах║╪сцэ╣╣╟╦жп╣д╫е╠╬ё╛уБр╡йгн╙ак╥юж╧фДкШхкм╗╧ЩткппмБ╡©╫е╠╬╤Ь╢О╣╫╤ах║дз╡©нд╪Ч╣дд©╣д║ё</P>
 <P>╪Ьсз╪сцэ╣╣╟╦╣диХ╪фЁУжтё╛нрцг╡╩╩А╧╚╡╪хн╨н╧ьсзоЮ╧ь╪сцэкЦ╥╗╣дпео╒ё╛гК╡╩р╙йтм╪╥жнЖ╩Руъфф╫БкЭ║ё</P>
-<H2 style="MARGIN-RIGHT: 0px" dir=ltr>фДкШ</H2>
+<H2>фДкШ</H2>
 <H3><A name=ext_lib>ю╘у╧©Б</A></H3>
-<P>RGSS нч╥╗╪стьтзCсОят╩╥╬Ёоб╠Юп╢╣дRubyю╘у╧©Б.ё╛уБр╡йгн╙й╡ц╢нрцгтйпМ╪стьртобюЮпм╣дю╘у╧©Б╣дт╜рРё╨</P>
+<P>RGSS нч╥╗╪стьтзCсОят╩╥╬Ёоб╠Юп╢╣дRubyю╘у╧©Бё╛уБр╡йгн╙й╡ц╢нрцг╪стьакртобю╘у╧©Б╣дт╜рРё╨</P>
 <UL>
   <LI>dl
   <LI>zlib
@@ -123,17 +115,16 @@ dir=ltr>╤тсно╥╫Ьпп╪сцэё╛©ирттзр╩╤╗Ёл╤хио╥юж╧╠Пхк╤тсно╥╫Ьпппч╦д/╥жнЖ║ёдЦ©иртм╗╧Щт
   <LI>japanese_sjis
   <LI>Win32API </LI></UL>
 <H3><A name=character_code>вж╥Ш╪╞</A></H3>
-<P>RGSS й╧сц╣дйг UTF-8 вж╥Ш╠ЮбК║ё UTF-8&nbsp;йг Unicode вж╥Ш╠ЮбК╣др╩╦Ж╥жж╖ё╛╤Ь Unicode
+<P>RGSS й╧сц╣дйг UTF-8 вж╥Ш╠ЮбК║ё UTF-8 йг Unicode вж╥Ш╠ЮбК╣др╩╦Ж╥жж╖ё╛╤Ь Unicode
 вж╥Ш╠ЮбК©иртж╖Ёжйю╫ГиокЫспюЮпмндвж╣дотй╬║ё</P>
 <P>RPG Maker кЫйДЁЖ╣днд╪Чжпё╛╠ЮбК╥╫й╫х╚╡©н╙ UTF-8 ё╛кЫрт╡╩╠ь╣ёпдрРн╙вж╥Ш╠ЮбК╥╫й╫╡╩м╛╤Ь╡ЗиЗ╣дЁЕм╩║ё</P>
 <H3><A name=property>йТпт</A></H3>
-<P>"йТпт"йгр╩╦Ж&nbsp;<A href="g_index.html">сно╥©Б</A> жп╣д╦едНё╛кЭ╡╒╥г Ruby юОЁЖож╣д╦едНё╛╤Ьйгр╩жж RGSS
+<P>"йТпт"йгр╩╦Ж <A href="g_index.html">сно╥©Б</A> жп╣д╦едНё╛кЭ╡╒╥г Ruby юОЁЖож╣д╦едНё╛╤Ьйгр╩жж RGSS
 жп╤юсп╣д╦едН║ё</P>
 <P>╠ххГё╛юШсцобцФ╣д╢ЗбК©ирт╩Ях║╨миХ╤╗р╩╦Ж╬╚аИ╣двЬ╠Й(<A href="gc_sprite.html#x">Sprite#x</A>)ё╨</P><PRE>x = sprite1.x            # ╩Ях║
 sprite2.x = x + 32    # иХ╤╗</PRE>
 <P>н╙ак╥╫╠ЦфП╪Шё╛уБ╠╩╤╗рЕн╙©им╗╧Щ╦Ёж╣тккЦ╥Ш╫Ьпп╩Ях║ё╗╤аЁЖё╘╨миХ╤╗ё╗п╢хКё╘╣д╥╫╥╗ё╛╬мЁфн╙"йТпт"║ё</P>
-<P>╣╚йгхГм╛ <A href="gc_color.html">Color</A>&nbsp;юЮ║╒ <A
-href="gc_tone.html">Tone</A>&nbsp;юЮ║╒&nbsp;<A href="gc_rect.html">Rect</A>&nbsp;юЮ
-╣д╤тоСё╛кЫ╥╣╩ь╣дйг╤тоС╣д╡нууж╣ё╛╤Ь╥г╤тоС╣д╦╠╠╬║ёрР╢к©иртсцобцФ╣д╦Яй╫пч╦двжлЕяуи╚ё╨</P><PRE>color = font1.color
+<P>╣╚йгхГм╛ <A href="gc_color.html">Color</A> юЮ║╒ <A href="gc_tone.html">Tone</A> юЮ║╒<A href="gc_rect.html">Rect</A> юЮ
+╣д╤тоСё╛кЫ╥╣╩ь╣дйг╤тоС╣дрЩсцё╛╤Ь╥г╤тоС╣д╦╠╠╬║ёрР╢к©иртсцобцФ╣д╦Яй╫пч╦двжлЕяуи╚ё╨</P><PRE>color = font1.color
 color.set(255, 0, 0)</PRE>
-<H6>&nbsp;</H6></BODY></HTML>
+<H6></H6></BODY></HTML>
